syntax = "proto3";
package provenance.epoch.v1;

import "gogoproto/gogo.proto";

option go_package          = "github.com/provenance-io/provenance/x/epoch/types";
option java_package        = "io.provenance.epoch.v1";
option java_multiple_files = true;

// EpochInfo defines characteristics of an eppoch defined by the platform
message EpochInfo {
  option (gogoproto.equal)           = true;
  option (gogoproto.goproto_getters) = true;

  string identifier                 = 1;
  uint64  start_height               = 2; // start height of the beginning of all epoch
  uint64  duration                   = 3; // in blocks for e.g a month will be (30*24*7*60*60)/5 blocks
  uint64  current_epoch              = 4;
  uint64  current_epoch_start_height = 5; // start height of the current epoch
  bool   epoch_counting_started     = 6;
}

// GenesisState defines the epochs module's genesis state.
message GenesisState {
  option (gogoproto.equal)           = true;
  option (gogoproto.goproto_getters) = true;

  repeated EpochInfo epochs = 1 [(gogoproto.nullable) = false];
}
